@@ -30,7 +30,7 @@
    "provides" : {
       "Directory::Organize" : {
          "file" : "lib/Directory/Organize.pm",
-         "version" : "v0.9.4"
+         "version" : "v0.9.5"
       }
    },
    "release_status" : "stable",
@@ -39,5 +39,5 @@
          "http://dev.perl.org/licenses/"
       ]
    },
-   "version" : "v0.9.4"
+   "version" : "v0.9.5"
 }
